adding db features